2 more pages added + minor changes

--- a/cattlefeed-and-fertilizers.html
+++ b/cattlefeed-and-fertilizers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagirath Industries | Biofuels</title>
+    <title>Bhagirath Industries | Cattlefeed and Fertilizers</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- <link rel="stylesheet" href="assets/css/contact-us.css"> -->
@@ -63,12 +63,11 @@
                                     Oil Products</a></li>
                             <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a>
                             </li>
-                            <li><a class="dropdown-item text-dark active" aria-current="page"
-                                    href="./biofuels.html">Biofuels</a></li>
+                            <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
                             <li><a class="dropdown-item text-dark" href="./minerals-and-ores.html">Minerals and Ores</a>
                             </li>
-                            <li><a class="dropdown-item text-dark" href="./cattlefeed-and-fertilizers.html">Cattlefeed
-                                    and Fertilizers</a></li>
+                            <li><a class="dropdown-item text-dark active" aria-current="page"
+                                    href="./cattlefeed-and-fertilizers.html">Cattlefeed and Fertilizers</a></li>
                         </ul>
                     </li>
 
@@ -102,8 +101,8 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-1.png" class="d-block w-100"
-                    alt="Hero Image 1">
+                <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-1.png"
+                    class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur. </h1>
                     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
@@ -111,8 +110,17 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-2.png" class="d-block w-100"
-                    alt="Hero Image 2">
+                <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-2.png"
+                    class="d-block w-100" alt="Hero Image 2">
+                <div class="carousel-caption text-center">
+                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                </div>
+            </div>
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-3.png"
+                    class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur. </h1>
                     <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
@@ -146,89 +154,217 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
-                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
-                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
-                material requirements.
+            <p class="text-center">At Bhagirath BVM Grand, we are committed to delivering top-quality cattle feed and
+                fertiliser products that empower agriculture and enhance livestock management. Our extensive portfolio
+                ensures that you have access to a wide range of options to meet your agricultural and livestock needs.
             </p>
         </div>
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-1.png" class="card-img-top"
-                    alt="BIO DIESEL">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-1.png"
+                    class="card-img-top" alt="RICE HUSK">
                 <div class="card-body">
-                    <h3>BIO DIESEL</h3>
-                    <p>BioDiesel is a renewable diesel fuel made from organic materials.</p>
+                    <h3>RICE HUSK</h3>
+                    <p>A cost-effective livestock feed choice.</p>
                     <ul>
-                        <li>Reduces greenhouse gas emissions.</li>
-                        <li>Can be used in existing diesel engines.</li>
-                        <li>Promotes energy independence.</li>
-                        <li>Lower sulphur content compared to traditional diesel.</li>
-                        <li>Supports agriculture by using crops like soybeans and canola.</li>
+                        <li>Cost-effective livestock feed.</li>
+                        <li>Abundant source of fibre.</li>
+                        <li>Aids in digestive health.</li>
+                        <li>Reduces waste in rice production.</li>
+                        <li>Eco-friendly alternative.</li>
                     </ul>
                 </div>
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.png" class="card-img-top" alt="ETHANOL">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-2.png"
+                    class="card-img-top" alt="YELLOW MAIZE">
                 <div class="card-body">
-                    <h3>ETHANOL</h3>
-                    <p>Ethanol is an alcohol-based biofuel primarily derived from corn or sugarcane.</p>
+                    <h3>YELLOW MAIZE</h3>
+                    <p>Energy-packed staple for livestock diets.</p>
                     <ul>
-                        <li>Reduces carbon dioxide emissions.</li>
-                        <li>Blended with gasoline to enhance octane levels.</li>
-                        <li>Supports the agricultural industry.</li>
-                        <li>Can be used in flexible-fuel vehicles.</li>
-                        <li>A renewable and domestically-produced fuel source.</li>
+                        <li>High-energy livestock feed.</li>
+                        <li>Rich in carbohydrates.</li>
+                        <li>Enhances weight gain.</li>
+                        <li>Versatile for various animals.</li>
+                        <li>Non-GMO option available.</li>
                     </ul>
                 </div>
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.png" class="card-img-top" alt="BIO LNG">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-3.png"
+                    class="card-img-top" alt="SOYABEAN">
                 <div class="card-body">
-                    <h3>BIO LNG</h3>
-                    <p>Bio LNG is a renewable form of liquefied natural gas made from organic matter.</p>
+                    <h3>SOYABEAN</h3>
+                    <p>High-protein essential for cattle health.</p>
                     <ul>
-                        <li>Lowers greenhouse gas emissions.</li>
-                        <li>Can be used for transportation and industrial purposes.</li>
-                        <li>Increases energy security.</li>
-                        <li>Supports waste-to-energy initiatives.</li>
-                        <li>Part of a sustainable circular economy.</li>
+                        <li>High-protein content.</li>
+                        <li>Essential amino acids for livestock.</li>
+                        <li>Promotes muscle growth.</li>
+                        <li>Supports immune function.</li>
+                        <li>Valuable in balanced diets.</li>
                     </ul>
                 </div>
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-4.png" class="card-img-top"
-                    alt="FATTY ACIDS AND STERNE">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-4.png"
+                    class="card-img-top" alt="NON GMO">
                 <div class="card-body">
-                    <h3>FATTY ACIDS AND STERNE</h3>
-                    <p>Fatty Acids & Sterne are renewable bio-based materials used in various industries.</p>
+                    <h3>NON GMO</h3>
+                    <p>Ensuring safety and purity.</p>
                     <ul>
-                        <li>Versatile components for biofuels, plastics, and chemicals.</li>
-                        <li>Reduce dependence on fossil fuels.</li>
-                        <li>Sustainable sourcing from plant and animal fats.</li>
-                        <li>Enable the production of eco-friendly products.</li>
-                        <li>Support the transition to a bio-based economy.</li>
+                        <li>Ensures genetic purity.</li>
+                        <li>Promotes animal and environmental health.</li>
+                        <li>Source of diverse nutrients.</li>
+                        <li>Ideal for organic farming.</li>
+                        <li>Customizable to specific needs.</li>
                     </ul>
                 </div>
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-5.png" class="card-img-top"
-                    alt="PALM OIL AND USED COOKING OIL">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-5.png"
+                    class="card-img-top" alt="RAW MATERIALS & OTHER FEEDS">
                 <div class="card-body">
-                    <h3>PALM OIL AND USED COOKING OIL</h3>
-                    <p>Palm Oil and Used Cooking Oil are sustainable sources for biofuel production.</p>
+                    <h3>RAW MATERIALS & OTHER FEEDS</h3>
+                    <p>Diverse feeds for agriculture and livestock nutrition.</p>
                     <ul>
-                        <li>Palm oil-based biodiesel is an alternative to fossil diesel.</li>
-                        <li>Reduces waste and environmental impact.</li>
-                        <li>Supports responsible palm oil sourcing practices.</li>
-                        <li>Used cooking oil recycling reduces landfill waste.</li>
-                        <li>Contributes to cleaner energy and waste management.</li>
+                        <li>Diverse range of raw materials and supplementary feeds available.</li>
+                        <li>Customizable options to meet specific livestock dietary needs.</li>
+                        <li>Sourced from high-quality and trusted suppliers.</li>
+                        <li>Ensures the purity and safety of animal feed.</li>
+                        <li>Supports the well-being and growth of livestock.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 6th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-6.png"
+                    class="card-img-top" alt="VERMI COMPOST">
+                <div class="card-body">
+                    <h3>VERMI COMPOST</h3>
+                    <p>Organic fertiliser enriches soil fertility.</p>
+                    <ul>
+                        <li>Organic soil conditioner.</li>
+                        <li>Enhances nutrient retention.</li>
+                        <li>Improves soil structure.</li>
+                        <li>Boosts microbial activity.</li>
+                        <li>Eco-friendly and sustainable.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 7th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-7.png"
+                    class="card-img-top" alt="UREA N46 - GRANULAR PRILLED">
+                <div class="card-body">
+                    <h3>UREA N46 - GRANULAR PRILLED</h3>
+                    <p>Reliable nitrogen source for plants.</p>
+                    <ul>
+                        <li>Consistent and reliable nitrogen source.</li>
+                        <li>Promotes healthy plant growth.</li>
+                        <li>Suitable for a variety of crops.</li>
+                        <li>Prilled form for easy application.</li>
+                        <li>Enhances nitrogen efficiency.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 8th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-8.png"
+                    class="card-img-top" alt="DAP & MAP">
+                <div class="card-body">
+                    <h3>DAP & MAP</h3>
+                    <p>Phosphorus-rich fertilisers for robust roots.</p>
+                    <ul>
+                        <li>Rich in phosphorus for strong root development.</li>
+                        <li>Vital for flowering and fruiting.</li>
+                        <li>Boosts overall plant vitality.</li>
+                        <li>Suitable for a wide range of crops.</li>
+                        <li>Enhances crop yield and quality.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 9th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-9.png"
+                    class="card-img-top" alt="COMPLEX & SOLUABLE FERTILIZERS">
+                <div class="card-body">
+                    <h3>COMPLEX & SOLUABLE FERTILIZERS</h3>
+                    <p>Tailored blends for crop needs.</p>
+                    <ul>
+                        <li>Customizable blends for specific crop requirements.</li>
+                        <li>Provides a balanced mix of nutrients.</li>
+                        <li>Supports targeted nutrient delivery.</li>
+                        <li>Improves nutrient uptake efficiency.</li>
+                        <li>Tailored solutions for optimal crop growth.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 10th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-10.png"
+                    class="card-img-top" alt="POTASH & NPK">
+                <div class="card-body">
+                    <h3>POTASH & NPK</h3>
+                    <p>Balanced nutrients for plant vitality.</p>
+                    <ul>
+                        <li>Balanced combination of essential nutrients.</li>
+                        <li>Vital for overall plant health.</li>
+                        <li>Encourages robust growth and yield.</li>
+                        <li>Suitable for various soil types and crops.</li>
+                        <li>Addresses nutrient deficiencies effectively.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 11th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-11.png"
+                    class="card-img-top" alt="BIO NPK & BIO DAP">
+                <div class="card-body">
+                    <h3>BIO NPK & BIO DAP</h3>
+                    <p>Sustainable solutions for agriculture.</p>
+                    <ul>
+                        <li>Environmentally friendly alternatives.</li>
+                        <li>Enhance soil health and fertility.</li>
+                        <li>Promote sustainable agriculture practices.</li>
+                        <li>Improve nutrient availability to plants.</li>
+                        <li>Support long-term crop productivity.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 12th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-12.png"
+                    class="card-img-top" alt="BIO PROM">
+                <div class="card-body">
+                    <h3>BIO PROM</h3>
+                    <p>Innovative crop productivity boosters.</p>
+                    <ul>
+                        <li>Innovative solutions for crop enhancement.</li>
+                        <li>Enhances plant growth and resilience.</li>
+                        <li>Boosts crop yield and quality.</li>
+                        <li>Sustainable and eco-friendly.</li>
+                        <li>Improves overall farm profitability.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 13th Card -->
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-13.png"
+                    class="card-img-top" alt="UREA GAS / LIQUID">
+                <div class="card-body">
+                    <h3>UREA GAS / LIQUID</h3>
+                    <p>Versatile nitrogen fertilisers for various applications.</p>
+                    <ul>
+                        <li>Versatile nitrogen source for various applications.</li>
+                        <li>Suitable for foliar and soil application.</li>
+                        <li>Enhances nitrogen utilisation by plants.</li>
+                        <li>Ideal for precision agriculture.</li>
+                        <li>Provides flexibility in fertilisation practices.</li>
                     </ul>
                 </div>
             </div>
