--- a/about.html
+++ b/about.html
@@ -66,6 +66,10 @@
                             <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a>
                             </li>
                             <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
+                            <li><a class="dropdown-item text-dark" href="./minerals-and-ores.html">Minerals and Ores</a>
+                            </li>
+                            <li><a class="dropdown-item text-dark" href="./cattlefeed-and-fertilizers.html">Cattlefeed
+                                    and Fertilizers</a></li>
                         </ul>
                     </li>
 
