--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -64,6 +64,10 @@
                             <li><a class="dropdown-item text-dark active" aria-current="page"
                                     href="./agro-commodities.html">Agro Commodities</a></li>
                             <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
+                            <li><a class="dropdown-item text-dark" href="./minerals-and-ores.html">Minerals and Ores</a>
+                            </li>
+                            <li><a class="dropdown-item text-dark" href="./cattlefeed-and-fertilizers.html">Cattlefeed
+                                    and Fertilizers</a></li>
                         </ul>
                     </li>
 
@@ -97,7 +101,7 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="./assets/images/agro-commodities-copy/hero-img/agro-commodities-hero-img-1.png"
+                <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-1.png"
                     class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur. </h1>
@@ -106,7 +110,7 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="./assets/images/agro-commodities-copy/hero-img/agro-commodities-hero-img-2.png"
+                <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-2.png"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur. </h1>
@@ -151,7 +155,7 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-1.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.png"
                     class="card-img-top" alt="Rice">
                 <div class="card-body">
                     <h3>RICE</h3>
@@ -168,7 +172,7 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-2.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-2.png"
                     class="card-img-top" alt="Soyabeans">
                 <div class="card-body">
                     <h3>SOYABEANS</h3>
@@ -185,7 +189,7 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-3.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-3.png"
                     class="card-img-top" alt="Wheat">
                 <div class="card-body">
                     <h3>WHEAT</h3>
@@ -202,7 +206,7 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-4.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.png"
                     class="card-img-top" alt="Sugar">
                 <div class="card-body">
                     <h3>SUGAR</h3>
@@ -219,7 +223,7 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-5.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-5.png"
                     class="card-img-top" alt="Dal and pulses">
                 <div class="card-body">
                     <h3>DAL AND PULSES</h3>
@@ -236,7 +240,7 @@
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-6.png"
+                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-6.png"
                     class="card-img-top" alt="Yellow maize">
                 <div class="card-body">
                     <h3>YELLOW MAIZE</h3>
