--- a/career.html
+++ b/career.html
@@ -63,6 +63,10 @@
                   Products</a></li>
               <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a></li>
               <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
+              <li><a class="dropdown-item text-dark" href="./minerals-and-ores.html">Minerals and Ores</a>
+              </li>
+              <li><a class="dropdown-item text-dark" href="./cattlefeed-and-fertilizers.html">Cattlefeed
+                  and Fertilizers</a></li>
             </ul>
           </li>
 
