img sizes reduced (part 2) + trading portfolio section completed

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-1.webp" class="d-block w-100"
-                    alt="...">
+                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-1.webp"
+                    class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>COMMODITIES AND FOOD PRODUCTS</h1>
                     <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products
@@ -112,8 +112,8 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-2.webp" class="d-block w-100"
-                    alt="...">
+                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-2.webp"
+                    class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
                     <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products
@@ -123,8 +123,8 @@
             </div>
 
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-3.webp" class="d-block w-100"
-                    alt="...">
+                <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-3.webp"
+                    class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>PETROLEUM AND BIO FUEL</h1>
                     <p class="text-center">Are you looking for top-quality agriculture commodities and food products?
@@ -263,8 +263,8 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-1.webp" class="card-img-top"
-                            alt="Global Merchant Trader">
+                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-1.webp"
+                            class="card-img-top" alt="Global Merchant Trader">
                         <h3 class="about-card-title text-dark">Global Merchant Trader</h3>
                         <p class="about-card-text text-black">We're your global merchants, passionate about delivering
                             top-quality products to eager markets worldwide. With extensive experience and a robust
@@ -273,8 +273,8 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2.webp" class="card-img-top"
-                            alt="We Serve Globally">
+                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2.webp"
+                            class="card-img-top" alt="We Serve Globally">
                         <h3 class="about-card-title text-dark">We Serve Globally</h3>
                         <p class="about-card-text text-black">At Bhagirath BVM Grand, we're dedicated to serving the
                             world. Our products and services know no boundaries, ensuring you receive the best no matter
@@ -284,8 +284,8 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-3.webp" class="card-img-top"
-                            alt="Professional Excellence">
+                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-3.webp"
+                            class="card-img-top" alt="Professional Excellence">
                         <h3 class="about-card-title text-dark">Professional Excellence</h3>
                         <p class="about-card-text text-black">Excellence is our way of life. We're a team of dedicated
                             professionals who know international trade inside out. We take pride in building lasting
@@ -422,7 +422,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector.png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector.png" alt="Global Sourcing">
                         </div>
                         <h2>Global Sourcing</h2>
                         <p>We're your reliable source for a wide range of products sourced from around the world. Count
@@ -432,7 +432,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector (1).png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector (1).png" alt="Logistics and Shipping">
                         </div>
                         <h2>Logistics and Shipping</h2>
                         <p>From cargo handling to global shipping solutions, we streamline the logistics process. Your
@@ -442,7 +442,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector (2).png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector (2).png" alt="Quality Assurance">
                         </div>
                         <h2>Quality Assurance</h2>
                         <p>Quality is our hallmark. We rigorously inspect and verify products to ensure they meet the
@@ -454,7 +454,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector (3).png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector (3).png" alt="Customized Solutions">
                         </div>
                         <h2>Customized Solutions</h2>
                         <p>We understand that one size doesn't fit all. Our team tailors solutions to meet your specific
@@ -464,7 +464,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector (4).png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector (4).png" alt="Global Market Access">
                         </div>
                         <h2>Global Market Access</h2>
                         <p>Whether you're a manufacturer looking to export or a business aiming to import, we open doors
@@ -474,7 +474,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="box-services h-100">
                         <div class="box-services-img text-start">
-                            <img src="assets/images/our-services-icon-img/Vector (5).png" alt="">
+                            <img src="assets/images/our-services-icon-img/Vector (5).png" alt="Customer Support">
                         </div>
                         <h2>Customer Support</h2>
                         <p>Our commitment doesn't end with a transaction. We provide exceptional customer support,
@@ -560,19 +560,19 @@
                     <!-- Second Section: Buttons -->
                     <div class="new-trading-portfolio-box-buttons col-md-3">
                         <button class="btn new-trading-portfolio-box-btn text-start"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.png">
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Crude Oil</button>
                         <button class="btn new-trading-portfolio-box-btn text-start"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-master-image.png">
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-master-image.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Partnering Procedure</button>
                         <button class="btn new-trading-portfolio-box-btn text-start"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-refiners-master-image.png">
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-refiners-master-image.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Working with Refiners</button>
                         <button class="btn new-trading-portfolio-box-btn text-start"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-master-image.png">
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-master-image.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Middle Distillates</button>
                     </div>
@@ -580,12 +580,11 @@
                     <!-- Third Section: Image -->
                     <div class="new-trading-portfolio-box-image col-md-5">
                         <img id="portfolio-img"
-                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.png"
+                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.webp"
                             class="img-fluid" alt="Portfolio Image">
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -627,14 +626,16 @@
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Useful Links</h3>
                     <div class="arrow">
-                        <a class="text-light" href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a class="text-light" href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a class="text-light" href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a class="text-light" href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a class="text-light" href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home<img
+                                src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a class="text-light" href="./about.html">About Us<img
+                                src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services<img
+                                src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt=""></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
@@ -690,13 +691,38 @@
     <script src="./assets/scripts/script.js"></script>
 
     <script>
-        // Trading Portfolio Box Script 
+        // Trading Portfolio Box Script (OLD)
+        // document.querySelectorAll('.new-trading-portfolio-box-btn').forEach(button => {
+        //     button.addEventListener('click', function () {
+        //         const newImage = this.getAttribute('data-img');
+        //         document.getElementById('portfolio-img').src = newImage;
+        //     });
+        // });
+        // Trading Portfolio Box Script (NEW)
         document.querySelectorAll('.new-trading-portfolio-box-btn').forEach(button => {
             button.addEventListener('click', function () {
                 const newImage = this.getAttribute('data-img');
                 document.getElementById('portfolio-img').src = newImage;
+                const portfolioBox = document.querySelector('.new-trading-portfolio-box');
+                if (newImage.includes('crude-oil')) {
+                    portfolioBox.style.backgroundColor = '#FFA9C33D';
+                } else if (newImage.includes('partnering-procedure')) {
+                    portfolioBox.style.backgroundColor = 'rgb(224, 228, 231)';
+                } else if (newImage.includes('refiners')) {
+                    portfolioBox.style.backgroundColor = 'rgb(255, 214, 177)';
+                } else if (newImage.includes('middle-distillates')) {
+                    portfolioBox.style.backgroundColor = 'rgb(201, 253, 245)';
+                }
+                // Remove 'active-btn' class from all buttons
+                document.querySelectorAll('.new-trading-portfolio-box-btn').forEach(btn => {
+                    btn.classList.remove('trading-portfolio-active-btn');
+                });
+                // Add 'active-btn' class to the clicked button to increase font size
+                this.classList.add('trading-portfolio-active-btn');
             });
         });
+        document.querySelector('.new-trading-portfolio-box').style.backgroundColor = '#FFA9C33D';
+
     </script>
 
     <!-- <script>
