--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -276,7 +276,7 @@
       </div>
       <!-- 9th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED NATURAL GAS.png" class="card-img-top"
+        <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED NATURAL GAS.webp" class="card-img-top"
           alt="LIQUIFIED NATURAL GAS">
         <div class="card-body">
           <h3>LIQUIFIED NATURAL GAS</h3>
@@ -292,7 +292,7 @@
       </div>
       <!-- 10th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/PETROLEUM COKE.png" class="card-img-top"
+        <img src="assets/images/petroleum-oil-page/card-img/PETROLEUM COKE.webp" class="card-img-top"
           alt="PETROLEUM COKE">
         <div class="card-body">
           <h3>PETROLEUM COKE</h3>
@@ -308,7 +308,7 @@
       </div>
       <!-- 11th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/NAPHTHA.png" class="card-img-top" alt="NAPHTHA">
+        <img src="assets/images/petroleum-oil-page/card-img/NAPHTHA.webp" class="card-img-top" alt="NAPHTHA">
         <div class="card-body">
           <h3>NAPHTHA</h3>
           <p>The essential feedstock for the petrochemical industry.</p>
@@ -323,7 +323,7 @@
       </div>
       <!-- 12th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/BITUMEN.png" class="card-img-top" alt="BITUMEN">
+        <img src="assets/images/petroleum-oil-page/card-img/BITUMEN.webp" class="card-img-top" alt="BITUMEN">
         <div class="card-body">
           <h3>BITUMEN</h3>
           <p>Building roads and infrastructure, one layer at a time.</p>
