--- a/minerals-and-ores.html
+++ b/minerals-and-ores.html
@@ -101,7 +101,7 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-1.png"
+                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-1.webp"
                     class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-2.png"
+                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-2.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-3.png"
+                <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-3.webp"
                     class="d-block w-100" alt="Hero Image 3">
                 <div class="carousel-caption text-center">
                     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
@@ -163,7 +163,7 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-1.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-1.webp"
                     class="card-img-top" alt="FERRO CROME">
                 <div class="card-body">
                     <h3>FERRO CROME</h3>
@@ -179,7 +179,7 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-2.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-2.webp"
                     class="card-img-top" alt="IRON ORE">
                 <div class="card-body">
                     <h3>IRON ORE</h3>
@@ -195,7 +195,7 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-3.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-3.webp"
                     class="card-img-top" alt="COAL">
                 <div class="card-body">
                     <h3>COAL</h3>
@@ -211,7 +211,7 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-4.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-4.webp"
                     class="card-img-top" alt="CROME CONCENTRATE">
                 <div class="card-body">
                     <h3>CROME CONCENTRATE</h3>
@@ -227,7 +227,7 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-5.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-5.webp"
                     class="card-img-top" alt="BAUXITE">
                 <div class="card-body">
                     <h3>BAUXITE</h3>
@@ -243,7 +243,7 @@
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-6.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-6.webp"
                     class="card-img-top" alt="CALAMINE">
                 <div class="card-body">
                     <h3>CALAMINE</h3>
@@ -259,7 +259,7 @@
             </div>
             <!-- 7th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-7.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-7.webp"
                     class="card-img-top" alt="MANGANESE">
                 <div class="card-body">
                     <h3>MANGANESE</h3>
@@ -275,7 +275,7 @@
             </div>
             <!-- 8th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-8.png"
+                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-8.webp"
                     class="card-img-top" alt="LITHIUM">
                 <div class="card-body">
                     <h3>LITHIUM</h3>
