--- a/our-company.html
+++ b/our-company.html
@@ -99,7 +99,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 29.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-1.webp" class="d-block w-100" alt="...">
         <!-- <div class="carousel-caption d-none d-md-block text-start"> -->
         <div class="carousel-caption text-center">
           <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 48.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-3.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>COMMODITIES AND FOOD PRODUCTS</h1>
           <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 49.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-2.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>PETROLEUM AND BIO FUEL</h1>
           <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
